adjust formatting of hot headlines boxes to reduce bad truncation of overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -111,10 +111,10 @@ body {
   float: right;
   margin: 12px;
   padding: 4px;
-  height: 90px;
-  width: 90px;
+  height: 89px;
+  width: 89px;
   overflow: hidden;
-
+  line-height: 1.25;
 }
 
 .hot-headline a {
