--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -506,6 +506,7 @@ h2 {
   padding: 5px;
   margin: 3px;
   margin-right: 8px;
+  margin-bottom: 6px;
   border: 1px solid #f56b23;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
