--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,8 @@
     <div id="ad-container">
       <!-- top-banner -->
       <div id='div-gpt-ad-1386774150760-2' style='width:728px; height:90px;'>
-      <script type='text/javascript'>
-      googletag.cmd.push(function() { googletag.display('div-gpt-ad-1386774150760-2'); });
-      </script>
+        <%= link_to (image_tag 'Q-WebAd-3-728x90.png'), root_path %>
+
       </div>
     </div>
 
@@ -68,9 +67,7 @@
         <div class="ad-box">
           <!-- ad-square-upper-right -->
           <div id='div-gpt-ad-1386774150760-1' style='width:250px; height:250px;'>
-          <script type='text/javascript'>
-          googletag.cmd.push(function() { googletag.display('div-gpt-ad-1386774150760-1'); });
-          </script>
+            <%= link_to (image_tag 'Q-WebAd-2-250.png'), root_path %>
           </div>
         </div>
 
@@ -112,9 +109,7 @@
         <div class="ad-box">
           <!-- ad-square-lower-right -->
           <div id='div-gpt-ad-1386774150760-0' style='width:250px; height:250px;'>
-          <script type='text/javascript'>
-          googletag.cmd.push(function() { googletag.display('div-gpt-ad-1386774150760-0'); });
-          </script>
+                      <%= link_to (image_tag 'Q-WebAd-4-250.png'), root_path %>
           </div>
         </div>
 
