--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
         <div class="ad-box">
           <!-- ad-square-upper-right -->
           <div id='div-gpt-ad-1386774150760-1' style='width:250px; height:250px;'>
-            <%= link_to (image_tag 'Q-WebAd-2-250.png'), root_path %>
+            <%= link_to (image_tag 'Q-WebAd-5-250.png'), 'https://twitter.com/quidnuncre' %>
           </div>
         </div>
 
