Added  Chitika ads and modified backgrounds.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@ body {
   margin: auto;
   margin-top: 24px;
   margin-bottom: 24px;
-  background-color: white;
+  background-color:#6398AF ;
   text-align: center;
   padding: 6px;
   width: 728px;
@@ -180,9 +180,8 @@ body {
   height: 250px;
   width: 250px;
   border: solid;
-  border-width: 2px;
+  border-width: 1px;
   border-color: gray;
-  background-color: #ddd;
 }
 
 #navigation .links {
