--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,7 @@
 
     <div id="ad-container">
       <!-- top-banner -->
-      <div id='div-gpt-ad-1386774150760-2' style='width:728px; height:90px;'>
-        <%= link_to (image_tag 'Q-WebAd-3-728x90.png'), root_path %>
-
-      </div>
+      <%= render partial: "layouts/chitika_ad_code_leaderboard" %>
     </div>
 
     <div id="content">
@@ -65,7 +62,8 @@
       <div id="navigation">
         <div class="ad-box">
           <!-- ad-square-upper-right -->
-            <%= link_to (image_tag randomize_side_banner), root_path %>
+              <%= render partial: "layouts/chitika_ad_code_250" %>
+
         </div>
 
         <div class="links">
@@ -105,7 +103,9 @@
 
         <div class="ad-box">
           <!-- ad-square-lower-right -->
-                      <%= link_to (image_tag randomize_side_banner), root_path %>
+          <!-- <%= link_to (image_tag randomize_side_banner), root_path %> -->
+          <%= render partial: "layouts/chitika_ad_code_250" %>
+
         </div>
 
       </div>
