adjust fallback to house image for leaderboard ad

--- a/app/views/layouts/_chitika_ad_code_leaderboard.html.erb
+++ b/app/views/layouts/_chitika_ad_code_leaderboard.html.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-    var unit = {"publisher":"quidnuncre","width":728,"height":90,"sid":"Chitika Default","color_site_link":"CF5B1D","color_text":"202020","color_bg":"6398AF","alturl":"http://www.quidnuncre.com/Q-WebAd-3-600x80.png"};
+    var unit = {"publisher":"quidnuncre","width":728,"height":90,"sid":"Chitika Default","color_site_link":"CF5B1D","color_text":"202020","color_bg":"6398AF","alturl":"#{image_tag 'Q-WebAd-3-728x90.png'}"};
     var placement_id = window.CHITIKA.units.length;
     window.CHITIKA.units.push(unit);
     document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
