--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<h2><%= link_to_post(post) %></h2>
+<h2 class="post_title"><%= link_to_post(post) %></h2>
 
 <div class="post-intro-header">
   <ul>
@@ -14,7 +14,6 @@
 </div>
 
 <div class="entry-body">
-
 <% if post.image.present? %>
   <div class="img-container">
     <div>
@@ -30,7 +29,9 @@
   <% if post.body_html %>
     <%= link_to("[more...]", post_path(post)) %>
   <% end %>
+  
+  <div class="front-meta">
+    <span class="comment-count"><%= link_to('', post_path(post, anchor: "disqus_thread")) %></span>
+  </div>
 </div>
-<div class="front-meta">
-  <span class="comment-count"><%= link_to('', post_path(post, anchor: "disqus_thread")) %></span>
-</div>
+
