--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 <% end -%>
 
 
-<h2><%= link_to_post(@post) %></h2>
+<h2 class="post_title"><%= link_to_post(@post) %></h2>
 
 <div class="post-header">
   <ul>
