Moved assets to public folder

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -226,7 +226,7 @@ textarea {
 }
 
 .facebook {
-  background-image: url(/assets/facebook_icon.png);
+  background-image: url(/facebook_icon.png);
   background-position: 18px;
   background-size: 15px;
 
@@ -236,7 +236,7 @@ textarea {
 }
 
 .twitter {
-  background-image: url(/assets/twitter_icon.png);
+  background-image: url(/twitter_icon.png);
   background-position: 16px;
   background-size: 20px;
 
@@ -276,7 +276,7 @@ textarea {
 }
 
 #navbar input {
-  background-image: url(/assets/search_icon.png);
+  background-image: url(/search_icon.png);
   background-repeat: no-repeat;
   background-size: 25px;
   background-position: 7px;
