--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -2,6 +2,7 @@
   <%= archives_title %>
 <% end -%>
 
+<div class="archives">
 <h2>Archives</h2>
 
 <% if @months.empty? -%>
@@ -18,3 +19,4 @@
 	<% end -%>
 
 <% end -%>
+</div>
