--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
 
     <tr class="pagination">
       <td colspan="5">
-        <%= will_paginate(@posts, :previous_label => '« Newer', :next_label => 'Older »') %>
+        <%= will_paginate(@posts, :previous_label => '&#10094;', :next_label => '&#10095;') %>
       </td>
     </tr>
 
