--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -3,14 +3,13 @@
   display:block;
   position:relative;
   text-align:left;
-  padding:10px 0 10px 3%
 }
 
 #mc_embed_signup h2 {
-  font-weight:bold;
-  padding:0;
-  margin:15px 0;
-  font-size:1.4em;
+  color: #275474;
+  font-family: 'Lato';
+  font-size: 28px;
+  font-weight: bold;
 }
 
 #mc_embed_signup input {
@@ -20,7 +19,7 @@
 
 #mc_embed_signup textarea {
   border:1px solid #999;
-  width: 559px;
+  width: 100%;
   -webkit-appearance:none;
   padding: 0;
 }
@@ -41,6 +40,7 @@
   clear:both;
   background-color: #f56b23;
   border: 0 none;
+  border-radius: 4px;
   color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
@@ -56,9 +56,7 @@
   white-space: nowrap;
   width: auto;
 }
-#mc_embed_signup .button:hover {
-  background-color:#777;
-}
+
 #mc_embed_signup .small-meta {
   font-size: 11px;
 }
