--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,14 +30,13 @@
 <% end %>
 
 <div class="sharing-buttons">
-    Share this post:
+    <span class="share_title">Share this post:</span>
     <span class='st_sharethis'></span>
     <span class='st_facebook'></span>
     <span class='st_twitter'></span>
     <span class='st_email'></span>
     <a href="javascript:window.print()"><%= image_tag("silk/printer.png", alt: "print") %></a>
 </div>
-
 
 <%= raw(@post.body_html) %>
 
@@ -58,16 +57,17 @@
   </ul>
 </div>
 
-
+<div class="post_controls">
 <% if %w(development test).include?(Rails.env) %>
   <% if @post.previous_post %>
-    <%= link_to "<- Previous ", @post.previous_post %>
+    <%= link_to "Previous ", @post.previous_post, class: 'previous_post' %>
   <% end %>
 
   <% if @post.next_post %>
-    <%= link_to " Next ->", @post.next_post %>
+    <%= link_to "Next", @post.next_post, class: 'next_post' %>
   <% end %>
 <% end %>
+</div>
 
 <div id="disqus_thread"></div>
 
