Removed old sidebar ad, added new

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -316,6 +316,12 @@ textarea {
     padding: 24px;
   }
 
+  #chitikaAdBlock {
+    background: #f3f3f3;
+    border: none;
+    border-radius: 3px;
+    padding: 24px;
+  }
 }
 
 #navigation .links {
