--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -316,7 +316,7 @@ textarea {
     padding: 24px;
   }
 
-  #chitikaAdBlock {
+  .chitikaAdBlock {
     background: #f3f3f3;
     border: none;
     border-radius: 3px;
