--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -320,7 +320,7 @@ textarea {
     background: #f3f3f3;
     border: none;
     border-radius: 3px;
-    padding: 24px;
+    padding: 24px !important;
   }
 }
 
