Bypassed and app/views/admin/posts/show.html.erb and    app/views/posts/show.html.erb to be able to publish and edit posts in production without login.

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing post - <%= link_to_post(@post) %></h1>
 
-<% if %w(development test).include?(Rails.env) %>
+<% if %w(development test production).include?(Rails.env) %>
   <% if @post.image.exists? %>
     <%= @post.image.url(:medium).to_s %>
   <% end %>
