--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,12 +62,11 @@
 <% end %>
 
   <div id="page_container">
-    <div id="ad-container">
+    <!--<div id="ad-container">
       <div id='div-gpt-ad-1386774150760-2' style='width:728px; height:90px;'>
-        <%= link_to (image_tag 'Q-WebAd-3-728x90.png'), root_path %>
-        <%= render partial: "layouts/chitika_ad_code_leaderboard" %>
+        <%#= render partial: "layouts/chitika_ad_code_leaderboard" %>
       </div>
-    </div>
+    </div>-->
     <div id="content">
       <div id="main">
         <p><% if flash[:notice] %><p><%= flash[:notice] %></p><% end %><p>
