--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,7 +40,7 @@
 
 <% if @post.source_link != '' %>
   Source: <a href= <%= @post.source_link %> >
-    <% if @post.source_link_description %>
+    <% if @post.source_link_description != "" %>
       <%= @post.source_link_description %>
     <% else %>
       <%= @post.source_link %></a>
