use created_at instead of updated_at for posts in sitemap

--- a/app/views/sitemap/index.xml.erb
+++ b/app/views/sitemap/index.xml.erb
@@ -4,7 +4,7 @@
     <url>
       <loc><%= post_path(post, only_path: false) %>/</loc>
       <lastmod>
-        <%= post.updated_at.strftime('%Y-%m-%d') %>
+        <%= post.created_at.strftime('%Y-%m-%d') %>
       </lastmod>
       <changefreq>daily</changefreq>
       <priority>0.5</priority>
