Added the title of the feeds with formatting in front of the feeds line. Added extra feeds.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -908,6 +908,11 @@ fieldset.toc
   padding-left: 15px;
 }
 
+.feeds-element {
+border:1px solid #f56b23;
+padding-right: 8px;
+}
+
 pre.ruby .keyword { color: #c41f1f; }
 pre.ruby .constant { color: #961818; }
 pre.ruby .comment { color: #f37e00; }
