--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -911,6 +911,14 @@ fieldset.toc
 .feeds-element {
 border:1px solid #f56b23;
 padding-right: 8px;
+padding-left: 8px;
+padding-bottom: 1px;
+padding-top: 1px;
+font-size: 12px;
+  &:hover {
+    background-color: #f56b23;
+  }
+
 }
 
 pre.ruby .keyword { color: #c41f1f; }
