Added "Feeds" button to the layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
     <%= link_to('SEND US TIPS', tipline_path) %>
     <%= link_to('CONTACT US', contact_path) %>
     <%= link_to('JOIN US', join_us_path) %>
+    <%= link_to('FEEDS', feeds_path) %>
 
     <form method="get" id="sform" action="http://www.google.com/search">
       <input type="text" id="q" value="search QN" name="q">
