--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,13 +1,16 @@
 <div class="archives">
-<h2>Listing Feeds</h2>
+  <h2>Listing Feeds</h2>
 
-    <% @all_feeds.each do |feed| %>
-     <% feed.entries.each do |entry|%>
+  <% @feeds.each do |feed| %>
 
-        <li> <span class="feeds-element"><%= link_to "#{feed.title}".force_encoding('UTF-8'), "#{feed.link}".force_encoding('UTF-8') %></span>
-          <%= link_to "#{entry.title}".force_encoding('UTF-8'), "#{entry.link}".force_encoding('UTF-8') %></li>
+    <li> <span class="feeds-element"><%= link_to "#{feed[:parsed_feed][:title]}".force_encoding('UTF-8'), "#{feed[:parsed_feed][:uri]}".force_encoding('UTF-8') %></span></li>
+
+    <% feed[:parsed_feed][:items ].each do |x|   %>
+      <%= link_to "#{x[:title].force_encoding('UTF-8')}".force_encoding('UTF-8'), "#{x[:link].force_encoding('UTF-8')}".force_encoding('UTF-8') %>
       </br>
-      <% end %>
     <% end %>
+
+    </br>
+  <% end %>
 
 </div>
