--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,16 +1,22 @@
 <div class="archives">
   <h2>Listing Feeds</h2>
 
+  <% feeds= Feed.all %>
+  <% if feeds.empty? -%>
+    <p> There are no feeds yet. We will update soon. </p>
+  <% else -%>
+
   <% @feeds.each do |feed| %>
 
     <li> <span class="feeds-element"><%= link_to "#{feed[:parsed_feed][:title]}".force_encoding('UTF-8'), "#{feed[:parsed_feed][:uri]}".force_encoding('UTF-8') %></span></li>
 
     <% feed[:parsed_feed][:items ].each do |x|   %>
-      <%= link_to "#{x[:title].force_encoding('UTF-8')}".force_encoding('UTF-8'), "#{x[:link].force_encoding('UTF-8')}".force_encoding('UTF-8') %>
+      <%= link_to "#{x[:title]}".force_encoding('UTF-8'), "#{x[:link]}".force_encoding('UTF-8') %>
       </br>
     <% end %>
 
     </br>
+  <% end %>
   <% end %>
 
 </div>
