--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -266,7 +266,8 @@ textarea {
     a {
       display: inline-block;
       color: white;
-      padding: 15px 12px;
+      padding: 15px 19px;
+      // padding: 15px 12px;
       transition: 200ms ease;
     }
 
