--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,17 +1,41 @@
-<div class="archives">
-  <h2>Listing Feeds</h2>
+<h2>Listing Feeds</h2>
+      <%#Simple RSS does returns an array with 'title' and 'link' in some particular cases, hence URI.extract is used with .last to guarantee that only the link will be used with link_to %>
 
   <% if @feeds.empty? %>
     <p> There are no feeds yet. We will update soon. </p>
   <% else %>
 
-    <% @feeds.each do |feed| %>
-      <li> <span class="feeds-element"><%= link_to title_decoder("#{feed[:parsed_feed][:title]}".force_encoding('UTF-8')), "#{feed[:parsed_feed][:uri]}".force_encoding('UTF-8'), :target => "_blank" %></span></li>
+  <% matrix = Array.new(3) { Array.new() }%>
 
-      <%#Simple RSS does returns an array with 'title' and 'link' in some particular cases, hence URI.extract is used with .last to guarantee that only the link will be used with link_to %>
+    <% @feeds.each do |feed| %>
       <% feed[:parsed_feed][:items ].each do |x|   %>
+
+        <% @decoded_feed_title = title_decoder("#{feed[:parsed_feed][:title]}".force_encoding('UTF-8')) %>
+        <% @decoded_feed_url = "#{feed[:parsed_feed][:uri]}".force_encoding('UTF-8') %>
+
+        <% if @decoded_feed_title.include? "CoStar"  %>
+          <% @decoded_feed_title = "Commercial Real Estate News CoStar Group"  %>
+        <% end %>
+
+        <% if @decoded_feed_title.include? "Crain"  %>
+          <% @decoded_feed_title = "Crain's New York Business"  %>
+        <% end %>
+
+        <% if @decoded_feed_title.include? "DNAINFO.com"  %>
+          <% @datetime = DateTime.parse(@decoded_feed_title)  %>
+          <% @decoded_feed_title = "DNAINFO.com Top Stories"  %>
+          <% @date_published_each_feed = @datetime %>
+        <% else %>
+          <% @date_published_each_feed = x[:published] %>
+          <% @date_published_each_feed  = Time.now if @date_published_each_feed.nil? %>
+          <% @date_published_each_feed %>
+        <% end %>
+
+        <span class="feeds-element"><%= link_to @decoded_feed_title, @decoded_feed_url, :target => "_blank" %></span>
+        <%= '-' %>
         <%= link_to title_decoder("#{x[:title]}".force_encoding('UTF-8').html_safe) , URI.extract("#{x[:link]}").last, :target => "_blank" %>
         </br>
+
       <% end %>
 
       </br>
