--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -910,7 +910,8 @@ fieldset.toc
 
 .feeds-element {
 border:1px solid #f56b23;
-padding-right: 6px;
+margin-right: 6px;
+padding-right: 5px;
 padding-left: 6px;
 padding-bottom: 1px;
 padding-top: 1px;
