--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,36 +1,18 @@
 <h2>Listing Feeds</h2>
       <%#Simple RSS does returns an array with 'title' and 'link' in some particular cases, hence URI.extract is used with .last to guarantee that only the link will be used with link_to %>
 
-  <% if @feeds.empty? %>
+  <% if @feeds.blank? %>
     <p> There are no feeds yet. We will update soon. </p>
   <% else %>
-
-  <% matrix = Array.new(3) { Array.new() }%>
-
-    <% @feeds.each do |feed| %>
-      <% feed[:parsed_feed][:items ].each do |x|   %>
-
-        <% @decoded_feed_title = title_decoder("#{feed[:parsed_feed][:title]}".force_encoding('UTF-8')) %>
-        <% shorten_names(@decoded_feed_title) %>
-
-        <% if @decoded_feed_title.include? "DNAINFO.com"  %>
-          <% @datetime = DateTime.parse(@decoded_feed_title)  %>
-          <% @decoded_feed_title = "DNAINFO.com Top Stories"  %>
-          <% @date_published_each_feed = @datetime %>
-        <% else %>
-          <% @date_published_each_feed = x[:published] %>
-          <% @date_published_each_feed  = Time.now if @date_published_each_feed.nil? %>
-          <% @date_published_each_feed %>
-        <% end %>
-
-        <span class="feeds-element"><%= @decoded_feed_title %></span>
-        <%= '-' %>
-        <%= link_to title_decoder("#{x[:title]}".force_encoding('UTF-8').html_safe) , URI.extract("#{x[:link]}").last, :target => "_blank" %>
-        </br>
-
+    <% sort_feeds_array %>
+    <br>
+    <% @feed_array.each do |val| %>
+      <% if val.present? %>
+        <span class="feeds-element"> <%= val[0] %> </span>
+        <%= link_to " - #{val[1]}", val[2] , :target => "blank" %>
+        <br>
       <% end %>
-
-      </br>
     <% end %>
+
   <% end %>
 </div>
